--- a/nMAC/nMAC.csproj
+++ b/nMAC/nMAC.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Logger.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Devices\Nexus5X.cs" />
+    <Compile Include="Devices\OnePlusOne.cs" />
     <Compile Include="ProgressDialogFragment.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -118,7 +119,7 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
      Other similar extension points exist, see Microsoft.Common.targets.
 		<Target Name="BeforeBuild">
 		</Target>
