--- a/nMAC/nMAC.csproj
+++ b/nMAC/nMAC.csproj
@@ -76,8 +76,6 @@
     <Compile Include="Devices\Nexus5.cs" />
     <Compile Include="Devices\Samsung.cs" />
     <Compile Include="Devices\YuYuphoria.cs" />
-    <Compile Include="MACFunctions.cs" />
-    <Compile Include="Helpers.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Devices\Nexus5X.cs" />
@@ -85,6 +83,8 @@
     <Compile Include="ProgressDialogFragment.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\General.cs" />
+    <Compile Include="Utils\MAC.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
